test/fail/double_free.bril
@main {
  one: int = const 1;
  p: ptr<int> = alloc one;
  free p;
  free p;
}
